Setup highlights and experience sections in react

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# VS Code
+.vscode
+
 # next.js build output
 .next
 # See https://help.github.com/ignore-files/ for more about ignoring files.
