Updating homepage to github pages url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jeffmsmith",
-  "homepage": "http://jeffmsmith.com",
+  "homepage": "https://mrjeffms.github.io/jeffmsmith/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
